--- a/project1/project.html
+++ b/project1/project.html
@@ -33,7 +33,9 @@
             </div>
         </a>
     </div>
-
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/classes.js"></script>
 </body>
 </html>
