Final changes to code and other misc stuff

--- a/project1/project.html
+++ b/project1/project.html
@@ -33,6 +33,7 @@
             </div>
         </a>
     </div>
+    <div class="game"></div>
 
     <!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
